updated back end code to work with JSON schema DTO changes - plus some refactoring for warnings